Fix label list spacing

--- a/assets/sass/hel/hearing-list.scss
+++ b/assets/sass/hel/hearing-list.scss
@@ -38,6 +38,9 @@
     }
     &-labellist {
         float: left;
+        a {
+            text-decoration: none;
+        }
     }
     &-closed {
         text-align: right;
